# pydantic-and-friends

./: .gitignore  README.md
.github/workflows/: main.yml
linkml-prototype-1/: README  README.md  ngff_image.py  ngff_image.yaml
ome-zarr-pydantic/: Makefile  README.md  environment.yml  pyproject.toml
ome-zarr-pydantic/ome_zarr_pydantic/: main.py  oz_model.py  oz_reader.py
ome-zarr-pydantic/ome_zarr_pydantic/model/: common.py  image.py  plate.py
ome-zarr-pydantic/tests/: .test_image.py.swp  conftest.py  test_image.py
whole-hierarchy-validation/: README.md  create_example_data.py  read_and_validate.py
zod-proto/: README.md  package.json  tsconfig.json
zod-proto/src/: app.ts
zod-proto/src/data/20200812-CardiomyocyteDifferentiation14-Cycle1.zarr/B/03/0/: .zattrs
zod-proto/src/hello_word/: object_schema.ts
zod-proto/src/schemas/: imageSchema.ts  plate.ts
zod-proto/src/util/: store.ts
