[tool.poetry]
authors = ["Maximilian Schulz <dominique.roux@roche.com>"]
description = ""
name = "ome_zarr_pydantic"
readme = "README.md"
version = "0.1.0"
[tool.poetry.scripts]
run = "ome_zarr_pydantic.main:main"

[tool.poetry.dependencies]
# python
python = "^3.10"
# model
pydantic = "^2.4.2"
# reader
ome-zarr = "^0.8.2"

[tool.poetry.group.dev.dependencies]
# Linter
mypy = "^1.4.1"
ruff = "^0.0.277"
# tests
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
# formatting
black = "^23.3.0"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
ignore = [
  "EXE002",
  "D100", # We ignore the doc coverage for now
  "D101", # We ignore the doc coverage for now
  "D102", # We ignore the doc coverage for now
  "D103", # We ignore the doc coverage for now
  "D104", # We ignore the doc coverage for now
  "D105", # We ignore the doc coverage for now
  "D106", # We ignore the doc coverage for now
  "D107", # We ignore the doc coverage for now,
  "D203", # one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
  "D401", #Too many violations, to be activated later
  "G004", #Too many violations, to be activated later
  "FIX002", #It is permitted to have TODO's
  "TD003", # Issue link is not required for TODO's
  "TRY003",
  "TRY002", # We don't to create a new exception type for each and every flavor of exception
  "EM101",
  "EM102", # If enforced this rule it makes the exception a bit easier to read (when the exception occurs) but makes the code a bit harder to read
]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "D",
  "B",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "FIX",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "PERF",
  "RUF",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Allow lines to be as long as 99 characters.
line-length = 99

[tool.ruff.per-file-ignores]
"tests/*" = [
  "N806",
  "S101",
  "PLR2004",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/resources"
